--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,9 @@
-<script src="app.js">
 
-</script>
 <html>
-  <div id="list"></div>
+  <head><title></title></head>
+
+  <body>
+    <div id="app"></div>
+    <script src="./bundle.js"></script>
+  </body>
 </html>
